--- a/style/style.css
+++ b/style/style.css
@@ -123,10 +123,11 @@ body {
 }
 
 .six .hat {
-  position: absolute;
+  position: absolute; /* 从 fixed 改为 absolute */
   width: 80px;
-  top: -35px;
-  left: 41.5%;
+  top: 0%;  /* 相对于 .six 的顶部的百分比 */
+  left: 53%;  /* 如果你希望让 .hat 出现在 img 的右侧，你可能需要微调这个值 */
+  
   /* transform: scale(0.1); */
 }
 
@@ -235,25 +236,25 @@ body {
 /* Media Queries */
 @media screen and (max-height: 1000px) {
   .six .hat {
-    left: 40%;
+    left: 53%;
   }
 }
 
 @media screen and (max-height: 800px) {
   .six .hat {
-    left: 37%;
+    left: 60%;
   }
 }
 
 @media screen and (max-height: 700px) {
   .six .hat {
-    left: 32%;
+    left: 60%;
   }
 }
 
 @media screen and (max-height: 850px) and (max-width: 450px) {
   .six .hat {
-    left: 32%;
+    left: 53%;
   }
 }
 
@@ -281,7 +282,7 @@ body {
 
   .six .hat {
     width: 50px;
-    top: -20px;
+    top: -10px;
   }
 
   .wish-hbd {
